--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression": "^1.5.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "~0.8.1",
+    "connect-multiparty": "^2.0.0",
     "consolidate": "~0.13.1",
     "cookie-parser": "^1.3.2",
     "crypto": "0.0.3",
